nova_tests/plan100.4.1/errdefer_fail_ok_only_on_error.nv
// Plan 100.4.1 (D147): errdefer fails только когда error-path triggers.

module nova_tests.plan100_4_1.errdefer_fail_ok_only_on_error

type RollbackErr { msg str }
type WorkErr { msg str }

type Transaction consume {
    id int,
}

fn Transaction consume @commit() -> () { () }
fn Transaction consume @rollback() Fail[RollbackErr] -> () {
    throw RollbackErr { msg: "rollback failed" }
}

fn begin() -> Transaction => Transaction { id: 1 }

fn process(should_fail bool) Fail -> () {
    consume tx = begin()
    errdefer { tx.rollback() }                  // failable rollback
    if should_fail {
        throw WorkErr { msg: "x" }              // triggers errdefer
    }
    tx.commit()
    // success: errdefer skipped → no Fail propagated
    // error:   errdefer fires → may fail → composite
}

test "errdefer fails только на error-path" {
    let r1 = process(false)                     // success, no errdefer fire
    let r2 = process(true)                      // error, errdefer fires, composite
}
